# PCQD_LIVE

./: .gitignore  README.md
.catkin_tools/profiles/default/: devel_collisions.txt
src/bebop_nav_real_1/bebop_autonomy/bebop_driver/launch/: bebop_with_vel_controller.launch
src/bebop_navigation/config/: costmap_common.yaml  planner.yaml
src/bebop_navigation/launch/: map_less_navigation.launch  move_base.launch
src/lab_10/: CMakeLists.txt  package.xml
src/lab_10/config/: cool_world.rviz
src/lab_10/launch/: LAB_10_DRONE_KIT.launch  ar_tracking.launch  get_position_drone_from_optitrack.launch  get_position_obs_from_optitrack.launch  launch_real_world.launch  point_cloud_to_laser.launch
src/lab_10/scripts/: get_marker_poses.py  move_base_handler.py  point_cloud_circular.py
src/lab_10/src/: bebop_commander.py  get_drone_pose_from_optitrack.py  get_obs_poses_from_optitrack.py
